<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="UnitConverter.massFrag"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_mass_input"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:inputType="numberSigned|numberDecimal"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textSize="15sp"
                android:theme="@style/MyEditText"
                app:backgroundTint="@color/colorOrange" />

            <Spinner
                android:id="@+id/mass_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="-6dp"
                android:popupBackground="#474646"
                android:theme="@style/mySpinnerItemStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/milligram"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/g"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:maxLines="1"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/gram"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/kilogram"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:maxLines="1"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/metricTon"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:maxLines="1"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/grain"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/oz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/ounce"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:maxLines="1"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/pound"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_us"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/ton_us"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_uk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:maxLines="1"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/ton_uk"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:maxLines="1"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/carat"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="-30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/u"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/atomic_mass"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>

