<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="UnitConverter.areaFrag"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_area_input"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textSize="15sp"
                android:theme="@style/MyEditText"
                app:backgroundTint="@color/colorOrange" />

            <Spinner
                android:id="@+id/area_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="-6dp"
                android:popupBackground="#474646"
                android:theme="@style/mySpinnerItemStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mm2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:maxLines="1"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/millimeterSquare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cm2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/centimeterSquare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/m2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/meterSquare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/are"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/are"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hectare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/hectare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/km2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/kilometerSquare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ft2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/footSquare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yd2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/yardSquare"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="-25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/acre"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="-5dp"
                android:textColor="@color/colorOrange"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:paddingStart="13dp"
                android:text="@string/acre"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>

